...
    }
}

enum class VariableWriteMode(val configValue: String, val displayName: String) {
    SET("set", "set it"),
    CLEAR("clear", "clear it"),
    ADD("add", "add to it"),
    EVALUATE("evaluate", "compute it"),
    ;

    companion object {
        const val CONFIG_KEY = "mode"

...
